Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130623

Windows: Resizing dialog with popupType: Popup.Window shows weird behavior when resizing.

XMLWordPrintable

    • Windows
    • 7fcdc3431 (dev), 050ba405d (6.8)

      When moving the open dialog and then resizing it, the dialog returns to its original position, resizes, and then moves back.

      To reproduce the issue, run the attached example project, move the dialog, and then resize it.

        1. popup.zip
          1 kB
          Mehdi Belila
        2. qtbug130623.zip
          1 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes